--- a/.github/workflows/contexts.yml
+++ b/.github/workflows/contexts.yml
@@ -1,36 +1,38 @@
-# This is a basic workflow to help you get started with Actions
+name: context demo
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+    inputs:
+      text:
+        description: 'enter the word you want to print'
+        default: 'Hello'
+        required: true  # mandatory parameter (true is assign here that means)
+        type: string
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+env:
+  firstName: 'Anmol'
+  website: 'tetsing mini bytes'
+
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  contexts-dmeo: # job 1
+    runs-on: ${{matix.os}}
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+    steps:
+
+      - run: echo ${{ inputs.text }}
+      - run: echo ${{ github.event.inputs.text }}
+      - run: echo ${{ github.actor }}
+      - run: echo 'Hi ${{ env.firstName }}'
+      - run: echo 'website - ${{ env.website }}'
+      - run: echo ${{job.status}}
+      - run: echo ${{ runner.os }}
+      - run: echo ${{ secrets.PASSWORD }} ${{ env.firstName }} # preference to LOCAL envvariable first
+        env:
+          firstName: 'Testing' #local environment variable 
+  
+  contexts-dmeo2: # job 2
+    needs: [contexts-dmeo] # dependent on 1st job
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
